# chatwithyourdatabase

./: README.md  pyproject.toml
src/: app.py
